--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,6 +10,15 @@
         <a class="nav-link" href="/listing">All Listing</a>
         <a class="nav-link" href="/listing/new">Add new Listing</a>
       </div>
+      <div class="navbar-nav ms-auto">
+        <% if(!currUser){%>
+          <a class="nav-link "  href="/signup">Sing up</a>
+          <a class="nav-link" href="/login">Login</a>
+        <% } %>
+        <% if(currUser){%>
+          <a class="nav-link" href="/logout">Log out</a>
+        <% } %>
+      </div>
     </div>
   </div>
 </nav>
