--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -14,13 +14,15 @@
                 <p class="card-text"><%=listing.country%></p>
         </div>
     </div> 
-<div class="btns">
-    <a href="/listing/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+    <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
+        <div class="btns">
+            <a href="/listing/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
 
-    <form action="/listing/<%= listing._id %>?_method=DELETE" method="post">
-        <button class="btn btn-dark offset-5">Delete</button>
-    </form>
-</div>
+            <form action="/listing/<%= listing._id %>?_method=DELETE" method="post">
+                <button class="btn btn-dark offset-5">Delete</button>
+            </form>
+        </div>
+    <% } %>
 
     <div class="col-8 offset-3 mb-3">
         <hr>
