--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -14,7 +14,7 @@
                 <p class="card-text"><%=listing.country%></p>
         </div>
     </div> 
-
+    <% if(currUser &&listing.owner._id.equals(currUser._id)) {%>
         <div class="btns">
             <a href="/listing/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
 
@@ -22,10 +22,11 @@
                 <button class="btn btn-dark offset-5">Delete</button>
             </form>
         </div>
-
-
+    <% } %>
+    
     <div class="col-8 offset-3 mb-3">
         <hr>
+        <% if(currUser) { %>
         <h4>Leave a Review</h4>
         <form action="/listing/<%= listing._id %>/review" method="POST" novalidate class="needs-validation">
             <div class="mb-3 mt-3">
@@ -40,12 +41,14 @@
             <button class="btn btn-outline-dark">Submit</button>
         </form>
         <hr>
+        <% } %>
+        
         <p><b>All Review</b></p>
         <div class="row">
         <% for(review of listing.reviews) {%>
                 <div class="card col-5 ms-3 mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">Raj</h5>
+                        <h5 class="card-title">@<%=review.author.username %></h5>
                          <p class="card-text"><%= review.comment %></p>
                          <p class="card-text"><%= review.rating %> Star</p>
                     </div>
