add image uploade

--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -2,7 +2,7 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
     <h3>Create a new listing</h3>
-    <form method="POST" action="/listing" novalidate class="needs-validation">
+    <form method="POST" action="/listing" novalidate class="needs-validation" enctype="multipart/form-data">
       
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
@@ -17,8 +17,8 @@
       </div>
 
       <div class="mb-3">
-        <label for="image" class="form-label">Image Link</label>
-        <input type="text" id="image" name="listing[image]" placeholder="Enter image URL/link" class="form-control">
+        <label for="image" class="form-label">Upload listing Image</label>
+        <input type="file" id="image" name="listing[image]" class="form-control">
       </div>
 
       <div class="row">
