--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -7,7 +7,7 @@
         <% for(let listins of alllisitn){ %>
             <a href="/listing/<%= listins._id %>" class="listing-link">
                 <div class="card col listing-card" >
-                <img src="<%= listins.image %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+                <img src="<%= listins.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
                 <div class="card-img-overlay"></div>
                 <div class="card-body">
                     <p class="card-text">
