--- a/views/listing/edit.ejs
+++ b/views/listing/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row mt-3">
     <div class="col-8 offset-2">
     <h3>Edit your listing</h3>
-    <form method="post" action="/listing/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+    <form method="post" action="/listing/<%= listing._id %>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input type="text" id="title" name="listing[title]" value="<%= listing.title %>" class="form-control" required>
@@ -14,8 +14,8 @@
             <div class="invalid-feedback">Plesase Enter the Short description</div>
         </div>
         <div class="mb-3">
-            <label for="image" class="form-label">Image URL</label>
-            <input type="text" id="image" name="listing[image]" value="<%= listing.image %>" class="form-control"required>
+            <label for="image" class="form-label">Upload New Image </label>
+            <input type="file" id="image" name="listing[image]" class="form-control">
             <div class="invalid-feedback">Please entr a valid Image</div>
         </div>
         <div class="row">
