--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -18,7 +18,7 @@
 
       <div class="mb-3">
         <label for="image" class="form-label">Upload listing Image</label>
-        <input type="file" id="image" name="listing[image]" class="form-control">
+        <input type="file" id="image" name="listing[image]" class="form-control" required>
       </div>
 
       <div class="row">
