Add image preview feature in edit listing page

--- a/views/listing/edit.ejs
+++ b/views/listing/edit.ejs
@@ -14,6 +14,11 @@
             <div class="invalid-feedback">Plesase Enter the Short description</div>
         </div>
         <div class="mb-3">
+            original Listing Image<br>
+            <img src="<%= originalImgUrl %>" >       
+        </div>
+     
+        <div class="mb-3">
             <label for="image" class="form-label">Upload New Image </label>
             <input type="file" id="image" name="listing[image]" class="form-control">
             <div class="invalid-feedback">Please entr a valid Image</div>
