--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -25,8 +25,9 @@
     <% } %>
     
     <div class="col-8 offset-3 mb-3">
-        <hr>
+        
         <% if(currUser) { %>
+            <hr>
         <h4>Leave a Review</h4>
         <form action="/listing/<%= listing._id %>/review" method="POST" novalidate class="needs-validation">
         
@@ -60,9 +61,10 @@
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
-        <hr>
-        <% } %>
         
+        <% } %>
+        <% if(listing.reviews.length > 0) {%>
+            <hr>
         <p><b>All Review</b></p>
         <div class="row">
         <% for(review of listing.reviews) {%>
@@ -79,5 +81,6 @@
                 </div>
             <% } %>
         </div>
+    <% } %>
     </div>
 </div>
