--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -32,10 +32,10 @@
         <a class="nav-link" href="/listing">Explore</a>
       </div>
       <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search">
+        <form class="d-flex" role="search" method="get" action="/listing">
           <input 
           class="form-control me-2 search-input" 
-          type="search" placeholder="Search destination"/>
+          type="search" placeholder="Search destination"name="title"/>
           <button class="btn search-btn" type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>Search
           </button>
