--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -1,4 +1,4 @@
-<% layout('/layouts/boilerplate') -%>
+<!-- <% layout('/layouts/boilerplate') -%>
    <style>
     #filters{
         display:flex ;
@@ -37,8 +37,10 @@
             <p>Trending</p>
         </div>
          <div class="filter">
-            <div><i class="fa-solid fa-bed"></i></div>
-            <p>Rooms</p>
+            <a class="filter" href="/listing?category=Rooms">
+                <div><i class="fa-solid fa-bed"></i></div>
+                <p>Rooms</p>
+            </a>
         </div>
         <div class="filter">
             <div><i class="fa-solid fa-mountain-city"></i></div>
@@ -117,4 +119,147 @@
             
         }
     })
+</script> -->
+
+<% layout('/layouts/boilerplate') -%>
+
+<style>
+  #filters {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .filter {
+    text-align: center;
+    margin-right: 2rem;
+    margin-top: 2rem;
+    opacity: 0.7;
+    text-decoration: none;
+    color: black;
+  }
+
+  .filter:hover {
+    opacity: 1;
+    cursor: pointer;
+  }
+
+  .filter p {
+    font-size: 0.8rem;
+  }
+
+  /* Highlight the active category */
+  .active-filter {
+    opacity: 1;
+    border-bottom: 2px solid black;
+  }
+
+  .tax-info {
+    display: none;
+  }
+
+  .tax-toggle {
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3.25rem;
+    padding: 1rem;
+    margin-left: 2rem;
+    display: flex;
+    align-items: center;
+  }
+</style>
+
+<!-- Category Filters -->
+<div id="filters">
+  <% const currentCategory = typeof category !== 'undefined' ? category : ''; %>
+
+  <a class="filter <%= currentCategory === 'Trending' ? 'active-filter' : '' %>" href="/listing?category=Trending">
+    <div><i class="fa-solid fa-fire"></i></div>
+    <p>Trending</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Rooms' ? 'active-filter' : '' %>" href="/listing?category=Rooms">
+    <div><i class="fa-solid fa-bed"></i></div>
+    <p>Rooms</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Iconic Cities' ? 'active-filter' : '' %>" href="/listing?category=Iconic Cities">
+    <div><i class="fa-solid fa-mountain-city"></i></div>
+    <p>Iconic Cities</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Mountain' ? 'active-filter' : '' %>" href="/listing?category=Mountain">
+    <div><i class="fa-solid fa-mountain"></i></div>
+    <p>Mountain</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Castles' ? 'active-filter' : '' %>" href="/listing?category=Castles">
+    <div><i class="fa-brands fa-fort-awesome"></i></div>
+    <p>Castles</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Amazing Pools' ? 'active-filter' : '' %>" href="/listing?category=Amazing Pools">
+    <div><i class="fa-solid fa-person-swimming"></i></div>
+    <p>Amazing Pools</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Camping' ? 'active-filter' : '' %>" href="/listing?category=Camping">
+    <div><i class="fa-solid fa-campground"></i></div>
+    <p>Camping</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Farms' ? 'active-filter' : '' %>" href="/listing?category=Farms">
+    <div><i class="fa-solid fa-tractor"></i></div>
+    <p>Farms</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Arctic' ? 'active-filter' : '' %>" href="/listing?category=Arctic">
+    <div><i class="fa-solid fa-snowman"></i></div>
+    <p>Arctic</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Domes' ? 'active-filter' : '' %>" href="/listing?category=Domes">
+    <div><i class="fa-solid fa-igloo"></i></div>
+    <p>Domes</p>
+  </a>
+
+  <a class="filter <%= currentCategory === 'Boats' ? 'active-filter' : '' %>" href="/listing?category=Boats">
+    <div><i class="fa-solid fa-ship"></i></div>
+    <p>Boats</p>
+  </a>
+
+  <div class="tax-toggle">
+    <div class="form-check-reverse form-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+      <label class="form-check-label" for="switchCheckDefault">Display Total After Taxes</label>
+    </div>
+  </div>
+</div>
+
+<!-- Listings Section -->
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
+  <% for (let listins of alllisitn) { %>
+    <a href="/listing/<%= listins._id %>" class="listing-link">
+      <div class="card col listing-card">
+        <img src="<%= listins.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+        <div class="card-body">
+          <p class="card-text">
+            <b><%= listins.title %></b><br>
+            &#8377;<%= listins.price.toLocaleString("en-IN") %>/night
+            <i class="tax-info">&nbsp;&nbsp; +18% GST</i>
+          </p>
+        </div>
+      </div>
+    </a>
+  <% } %>
+</div>
+
+<script>
+  let texswitch = document.getElementById("switchCheckDefault");
+  texswitch.addEventListener("click", () => {
+    let taxinfo = document.getElementsByClassName("tax-info");
+    for (let info of taxinfo) {
+      info.style.display = (info.style.display != "inline") ? "inline" : "none";
+    }
+  });
 </script>
