--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -7,7 +7,7 @@
         <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
             <p class="card-text">Owned by <i><%= listing.owner.username %></i><br></p>
-                
+                <p class="card-text">Category : <i><%= listing.category %></i></p>
                 <p class="card-text"><%=listing.description%></p>
                 <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN") %></p><!--price ne indin fromet ma covnet karva mate us thay toLocaleString -->
                 <p class="card-text"><%=listing.location%></p>
