--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,6 +94,22 @@ body{
     opacity: 0.2;
     background-color: white;
 }
+.card-img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 1;
+}
+
+.listing-card:hover .card-img-overlay {
+    opacity: 0.2;
+}
+
 
 /* New Page */
 
