--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -1,51 +1,4 @@
 <% layout('/layouts/boilerplate') -%>
-
-<style>
-  #filters {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-
-  .filter {
-    text-align: center;
-    margin-right: 2rem;
-    margin-top: 2rem;
-    opacity: 0.7;
-    text-decoration: none;
-    color: black;
-  }
-
-  .filter:hover {
-    opacity: 1;
-    cursor: pointer;
-  }
-
-  .filter p {
-    font-size: 0.8rem;
-  }
-
-  /* Highlight the active category */
-  .active-filter {
-    opacity: 1;
-    border-bottom: 2px solid black;
-  }
-
-  .tax-info {
-    display: none;
-  }
-
-  .tax-toggle {
-    border: 1px solid black;
-    border-radius: 1rem;
-    height: 3.25rem;
-    padding: 1rem;
-    margin-left: 2rem;
-    display: flex;
-    align-items: center;
-  }
-</style>
-
 <!-- Category Filters -->
 <div id="filters">
   <% const currentCategory = typeof category !== 'undefined' ? category : ''; %>
@@ -114,22 +67,23 @@
 </div>
 
 <!-- Listings Section -->
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
-  <% for (let listins of alllisitn) { %>
-    <a href="/listing/<%= listins._id %>" class="listing-link">
-      <div class="card col listing-card">
-        <img src="<%= listins.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
-        <div class="card-body">
-          <p class="card-text">
-            <b><%= listins.title %></b><br>
-            &#8377;<%= listins.price.toLocaleString("en-IN") %>/night
-            <i class="tax-info">&nbsp;&nbsp; +18% GST</i>
-          </p>
-        </div>
-      </div>
-    </a>
-  <% } %>
-</div>
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+        <% for(let listins of alllisitn){ %>
+            <a href="/listing/<%= listins._id %>" class="listing-link">
+                <div class="card col listing-card" >
+                <img src="<%= listins.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+                <div class="card-img-overlay"></div>
+                <div class="card-body">
+                    <p class="card-text">
+                        <b><%= listins.title %></b><br>
+                        &#8377;<%= listins.price.toLocaleString("en-IN") %>/night<br>   
+                    </p>
+                </div>
+            </div>
+            </a>
+        <% } %>
+    </div>
+
 
 <script>
   let texswitch = document.getElementById("switchCheckDefault");
